# chaebot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Pipfile  Procfile  README.md  Taskfile.prod.yml  Taskfile.yml  alembic.ini  blackpink.json  cloudbuild.yaml  db.bak.sql  db.json  dbupdate.sh  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-api.sh  docker-entrypoint.dev.sh  docker-entrypoint.sh  docker-release.sh  gunicorn.conf.py  heroku.yml  itzy.json  itzy.py  kbot.py  main.py  manage.py  mise.toml  postbuild.sh  prod.Dockerfile  pyproject.toml  redvelvet.json  release.sh  requirements.dev.txt  requirements.old.txt  requirements.txt  (+7 more)
.gitea/workflows/: build-and-push.yaml
.github/workflows/: build-and-push.yaml  main.yml
alembic/: env.py
alembic/versions/: 244d7b72f257_remove_vliveaccount_model_add_fields_to_.py  5c6b26f1c575_add_vlive_model.py  6406c7517345_rename_channel_twitterchannel.py  6c32903396a9_point_foreignkeys_to_group_name.py  75f440481a2a_remove_extra_foreignkeys.py  9aa10724f582_add_birthday_field_to_member.py  a112e83d763b_add_reverse_relations_in_group_and_.py  bf19abb62565_add_last_tweet_id_totwitteraccount.py  c4a001d102a5_create_tables.py  cc790dc4c69c_add_vlivechannel_model.py
autocomeback/: __main__.py  config.py  db.py  models.py  reddit.py
autocomeback/adapters/: __init__.py  dbkpop.py  reddit.py
autocomeback/migrations/: env.py
backend/: admin.py  asyncers.py  kbot.py  models.py  update_models.py  utils.py
backend/data/: blackpink.json  redvelvet.json
backend/migrations/: 0001_initial.py  0002_auto_20200702_1650.py  0003_auto_20200702_1659.py  0004_channel.py  0005_auto_20200708_2144.py
backend/update_models/: account.json  alias.json  channel.json  group.json  member.json
bot/: __main__.py  admin.py  apps.py  bot.py  client.py  firestore.py  models.py  serializers.py  urls.py  utils.py  views.py
bot/admin/: __init__.py  group.py  member.py  twitter.py  vlive.py
bot/api/: __init__.py  internal.py  vlive.py
bot/cogs/: __init__.py  admin.py  convenience.py  mama2020.py  mama2021.py  mama2022.py  query.py  schedule.py  startup.py  stats.py  subscription.py  tasks.py  tasks.py.pak  twitter.py  vlive.py
bot/crud/: group.py
bot/handlers/: hourly.py  twitter.py  vlive.py
bot/migrations/: 0001_initial.py  0002_auto_20201225_0413.py  0002_auto_20201225_2253.py  0003_auto_20201225_0433.py  0003_twittermediasource_last_tweet_id.py  0004_auto_20201225_0436.py  0004_vlivesubscribedchannel_dev_channel.py  0005_auto_20201225_0437.py  0005_auto_20201225_2343.py  0006_activate_pg_ext_20201226_2344.py  0007_auto_20210102_2104.py  0008_auto_20210106_2327.py  0009_auto_20210106_2334.py  0010_auto_20210107_0001.py  0011_auto_20210107_2035.py  0012_auto_20210108_2154.py  0013_member_native_name.py  0014_auto_20210108_2238.py  0015_auto_20211104_2341.py  0016_alter_group_vlive_channel_code.py  0017_remove_group_vlive_channel_code_and_more.py  0018_schedulesubscriber.py  0019_alter_schedulesubscriber_message_id.py  0020_alter_schedulesubscriber_unique_together_and_more.py  0021_alter_schedulesubscriber_unique_together_and_more.py  0022_emotecache_stickercache_stickerusage_emoteusage.py  0023_usercache_alter_emoteusage_emote_and_more.py  0024_alter_emoteusage_timestamp_and_more.py  0025_alter_emotecache_options_emotecache_name_and_more.py  0026_emotecache_channel_id_emotecache_guild_id_and_more.py
bot/models/: __init__.py  comeback.py  emote_cache.py  group.py  member.py  schedule.py  twitter.py  vlive.py
bot/serializers/: __init__.py  comeback.py  emote_cache.py  (+7 more)
common/: db.py  models.py  schemas.py  settings.py
docs/: .prettierrc.cjs  .prettierrc.json  biome.json  bun.lockb  index.html  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
itzybot/: asgi.py  settings.py  urls.py  wsgi.py
kvisualbot/: asgi.py  settings.py  urls.py  views.py  wsgi.py
manage/: __init__.py  makemigrations.py  migrate.py
migrations/: env.py
pipeline/: __main__.py  reddit.py
proxy/: nginx.conf
scripts/: dump_to_json.py  import_json.py  make_dotenv.py  make_dotenvrc.py
src/: __init__.py  add.py  asyncers.py  bot.py  crud.py  download.py  kbot.py  migrate.py  mixins.py  models.py  restart.py  update_or_create.py  utils.py
(+91 files in other folders)
