[tool.poetry]
name = "chaebot"
version = "1.3.0"
description = ""
authors = ["Kenneth V. Domingo <hello@kvd.studio>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.7"
aiohttp = "^3.10.0"
"discord.py" = "^2.4.0"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
gunicorn = { extras = ["gevent"], version = "^22.0.0" }
python-twitter = "^3.5"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
tqdm = "^4.66.5"
whitenoise = { extras = ["brotli"], version = "^6.7.0" }
dj-database-url = "^2.2.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
watchdog = "^4.0.1"
click = "^8.1.7"
psycopg2-binary = "^2.9.9"
google-cloud-firestore = "^2.17.0"
firebase-admin = "^6.5.0"

[tool.poetry.group.dev.dependencies]
google-cloud-secret-manager = "^2.15.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
ignore-init-module-imports = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
